# sciurus17_ros

./: .gitignore
.github/workflows/: industrial_ci.yml
sciurus17/: package.xml
sciurus17_bringup/: CMakeLists.txt  package.xml
sciurus17_bringup/config/: chest_camera.yaml
sciurus17_bringup/launch/: sciurus17_bringup.launch  sciurus17_complete_bringup.launch  sciurus_vehicle_bringup.launch
sciurus17_bringup/launch/cameras/: chest_camera.launch  realsense.launch
sciurus17_bringup/launch/includes/: description.launch  sciurus17_bringup.launch
sciurus17_bringup/scripts/: initpose_sciurus17.py
sciurus17_control/launch/: controller1.launch  controller2.launch  controller3.launch  sciurus17_control.launch  sciurus17_fake_control.launch
sciurus17_control/src/: dxlport_control.cpp  hardware.cpp
sciurus17_description/: package.xml
sciurus17_description/config/: sciurus17.rviz  sciurus17_with_vehicle.rviz  vehicle.rviz
sciurus17_description/launch/: display.launch  display_sciurus17.launch  display_sciurus17_with_vehicle.launch  display_vehicle.launch
sciurus17_description/robots/: sciurus17.urdf.xacro  sciurus17_with_vehicle.urdf.xacro  (+1 more)
sciurus17_gazebo/: CMakeLists.txt
sciurus17_gazebo/launch/: sciurus17_with_table.launch  sciurus17_with_vehicle.launch  sciurus17_with_vehicle_empty_world.launch  sciurus17_with_vehicle_wg_office.launch
sciurus17_gazebo/scripts/: initpose_sciurus17.py
sciurus17_gazebo/worlds/: empty.world
sciurus17_moveit_config/: .setup_assistant
sciurus17_msgs/: CMakeLists.txt
sciurus17_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
sciurus17_navigation/launch/: amcl.launch  move_base.launch  sciurus_vehicle_gmapping.launch  sciurus_vehicle_navigation.launch  sciurus_vehicle_navigation_teb.launch
sciurus17_navigation/maps/: map.yaml  map_atr_office.pgm  map_atr_office.yaml  map_wg_office.pgm  map_wg_office.yaml
sciurus17_navigation/param/: base_local_planner_params.yaml  costmap_common_params_sciurus_vehicle.yaml  dwa_local_planner_params_sciurus_vehicle.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
sciurus17_navigation/rviz/: sciurus_vehicle_gmapping.rviz  sciurus_vehicle_navigation.rviz
sciurus17_tools/: CMakeLists.txt  package.xml  setup.py
(+44 files in other folders)
