<?xml version="1.0"?>
<package format="2">
  <name>sciurus17_navigation</name>
  <version>0.1.0</version>
  <description>
    The sciurus17_navigation package provides roslaunch scripts for starting the navigation program.
  </description>
  <license>Apache 2.0</license>
  <author email="maeda@rt-net.jp">Maeda</author>
  <maintainer email="maeda@rt-net.jp">Maeda</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
</package>
